[package]
name = "pics2wall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.44"
chrono = "0.4"
winapi = { version = "0.3.9", features = ["winuser"] }
egui = "0.19.0"
egui_extras = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
image = { version = "0.24", features = ["jpeg", "png"] }
winreg = "0.10"
serde = { version = "1.0.145", features = ["derive", "rc"] }
serde_json = "1.0.86"
log = "0.4.17"
log4rs = "1.2.0"